manifest/base/bhasai/ai-tools/agri-flow-classifier-bert/service-agri-flow-classifier-bert.yaml
apiVersion: v1
kind: Service
metadata:
  name: agri-flow-classifier-bert
spec:
  selector:
    service: agri-flow-classifier-bert
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
